<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@mipmap/default_personal_image"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="45dp"
        android:orientation="vertical"
        android:background="@drawable/login_edittext">
        <EditText
            android:id="@+id/login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_username_hint"
            android:textColorHint="@color/firsttext_color"/>
        <EditText
            android:id="@+id/login_userpwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/login_userpwd_hint"
            android:textColorHint="@color/firsttext_color"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="30dp">
        <CheckBox
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/login_checkbox"
            android:duplicateParentState="false" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/login_content_forn"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/login_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_content"
            />
    </LinearLayout>
   <Button
       android:id="@+id/login_bt"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginLeft="30dp"
       android:layout_marginRight="30dp"
       android:text="@string/login_button"
       android:textColor="@color/white"
       android:textSize="30dp"/>


</LinearLayout>